--- a/web_ui/index.html
+++ b/web_ui/index.html
@@ -6,15 +6,55 @@
 		<link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="styles/solo.css">
 		<script type="text/javascript" src="scripts/angular.min.js"></script>
+		<script type="text/javascript" src="scripts/ui-bootstrap-tpls-2.0.1.min.js"></script>
 		<script type="text/javascript" src="scripts/solo.js"></script>
 	</head>
 	<body ng-controller="DocumentStore">
 		<div id="alert" class="alert alert-danger" role="alert">
 		</div>
 		<div id="body">
-			<div id="list" ng-show="opening">
-				<i id="cancel" class="fa fa-close" ng-click="close()"></i>
-				<table class="table table-condensed" ng-if="docs.length > 0">
+			<div id="editor">
+				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="content" ng-change="setDirty()" ng-style="{ 'font-size': text.size + 'px' }"></textarea>
+			</div>
+		</div>
+		<div id="footer">
+			<div ng-if="!settings">
+				<div class="pull-left">
+					<button class="btn btn-warning navbar-btn" ng-click="reset()"><i class="fa fa-star-o"></i>&nbsp;New</button>
+					<button class="btn btn-success navbar-btn" ng-click="open()" ng-disabled="dirty"><i class="fa fa-folder-open-o"></i>&nbsp;Open</button>
+					<button class="btn btn-primary navbar-btn" ng-click="save(name, content)" ng-disabled="!dirty || name == ''"><i class="fa fa-floppy-o"></i>&nbsp;Save</button>
+					<input id="name" type="text" placeholder="Enter name..." ng-model="name" ng-minlength="1" ng-maxlength="256" ng-trim="true" ng-change="setDirty()"></input>
+				</div>
+				<div class="pull-right">
+					<button class="btn btn-info navbar-btn" ng-click="enter_settings()"><i class="fa fa-gear"></i>&nbsp;Settings</button>
+					<div class="btn-group" role="group" ng-if="development">
+						<button class="btn btn-warning navbar-btn" ng-click="reload()"><i class="fa fa-refresh"></i>&nbsp;Refresh</button>
+						<button class="btn btn-danger navbar-btn" ng-click="quit()"><i class="fa fa-power-off"></i>&nbsp;Quit</button>
+					</div>
+					<button class="btn btn-danger navbar-btn" ng-click="shutdown()" ng-if="!development"><i class="fa fa-power-off"></i>&nbsp;Power Off</button>
+				</div>
+			</div>
+			<div ng-if="settings">
+				<button class="btn btn-danger navbar-btn" ng-click="exit_settings()"><i class="fa fa-chevron-left"></i>&nbsp;Back</button>
+				<div class="btn-group" role="group">
+					<button class="btn btn-primary navbar-btn" ng-click="text_size(2)"><i class="fa fa-plus"></i></button>
+					<button class="btn btn-primary navbar-btn" ng-click="text_size()">Font</button>
+					<button class="btn btn-primary navbar-btn" ng-click="text_size(-2)"><i class="fa fa-minus"></i></button>
+				</div>
+			</div>
+		</div>
+
+		<script type="text/ng-template" id="docs.html">
+			<div class="modal-header bg-primary">
+				<span class="pull-left">
+					<h4 class="modal-title">{{docs.length}} Saved Documents</h4>
+				</span>
+				<span class="pull-right">
+					<i class="fa fa-close" ng-click="cancel()"></i>
+				</span>
+			</div>
+			<div class="modal-body">
+				<table class="table table-condensed table-hover">
 					<thead>
 						<tr>
 							<th>Name</th>
@@ -23,36 +63,28 @@
 						</tr>
 					</thead>
 					<tbody id="list-rows">
-						<tr ng-repeat="doc in docs | orderBy: 'name'" ng-model="doc" ng-click="get(doc.name)">
-							<td>{{doc.name}}</td>
-							<td>{{doc.modified | date: 'medium' }}</td>
-							<td>{{doc.size}}</td>
-							<td><i class="fa fa-trash" ng-click="remove(doc.name)"></i></td>
+						<tr ng-repeat="doc in docs | orderBy: 'name'" ng-model="doc" ng-hide="doc.removed">
+							<td ng-click="select(doc)">{{doc.name}}</td>
+							<td ng-click="select(doc)">{{doc.modified | date: 'medium' }}</td>
+							<td ng-click="select(doc)">{{doc.size}}</td>
+							<td><i class="fa fa-trash" ng-click="delete(doc)"></i></td>
 						</tr>
 					</tbody>
 				</table>
-				<div class="alert alert-warning" role="alert" ng-if="docs.length == 0">
-					No saved files!
-				</div>
 			</div>
-			<div id="editor" ng-hide="opening">
-				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="content" ng-change="setDirty()"></textarea>
+		</script>
+
+		<script type="text/ng-template" id="prompt.html">
+			<div class="modal-header bg-danger">
+				<h4 class="modal-title">{{title}}</h4>
 			</div>
-		</div>
-		<div id="footer">
-			<div class="pull-left">
-				<button class="btn btn-warning navbar-btn" ng-click="reset()"><i class="fa fa-star-o"></i>New</button>
-				<button class="btn btn-success navbar-btn" ng-click="open()" ng-disabled="dirty"><i class="fa fa-folder-open-o"></i>Open</button>
-				<button class="btn btn-primary navbar-btn" ng-click="set(doc.name, doc.content)" ng-disabled="!dirty || name == ''"><i class="fa fa-floppy-o"></i>Save</button>
-				<input id="name" type="text" placeholder="Enter name..." ng-model="name" ng-minlength="1" ng-maxlength="256" ng-trim="true" ng-change="setDirty()"></input>
+			<div class="modal-body">
+				<p>{{message}}</p>
 			</div>
-			<div class="pull-right">
-				<div class="btn-group" role="group">
-					<button class="btn btn-warning navbar-btn" ng-click="reload()"><i class="fa fa-refresh"></i>Refresh</button>
-					<button class="btn btn-danger navbar-btn" ng-click="quit()"><i class="fa fa-power-off"></i>Quit</button>
-				</div>
-				<button class="btn btn-danger navbar-btn" ng-click="shutdown()"><i class="fa fa-power-off"></i>Power Off</button>
+			<div class="modal-footer">
+				<button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+				<button class="btn btn-warning" type="button" ng-hide="ok_only" ng-click="cancel()">Cancel</button>
 			</div>
-		</div>
+        </script>
 	</body>
 </html>
