--- a/web_ui/index.html
+++ b/web_ui/index.html
@@ -10,23 +10,22 @@
 		<script type="text/javascript" src="scripts/solo.js"></script>
 	</head>
 	<body ng-controller="DocumentStore">
-		<div id="alert" class="alert alert-danger" role="alert">
-		</div>
+		<div id="alert" uib-alert class="alert alert-danger" ng-if="hasAlert()" dismiss-on-timeout="5000" close="clearAlert()">{{alertMessage}}</div>
 		<div id="body">
 			<div id="editor">
-				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="content" ng-change="setDirty()" ng-style="{ 'font-size': text.size + 'px' }"></textarea>
+				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="doc.content" ng-change="setDirty()" ng-style="{ 'font-size': getTextSize() }" ng-class="hasBackgroundImage() ? 'logo' : ''"></textarea>
 			</div>
 		</div>
 		<div id="footer">
-			<div ng-if="!settings">
+			<div ng-hide="isSettingsMode()" class="ng-cloak">
 				<div class="pull-left">
-					<button class="btn btn-warning navbar-btn" ng-click="reset()"><i class="fa fa-star-o"></i>&nbsp;New</button>
-					<button class="btn btn-success navbar-btn" ng-click="open()" ng-disabled="dirty"><i class="fa fa-folder-open-o"></i>&nbsp;Open</button>
-					<button class="btn btn-primary navbar-btn" ng-click="save(name, content)" ng-disabled="!dirty || name == ''"><i class="fa fa-floppy-o"></i>&nbsp;Save</button>
-					<input id="name" type="text" placeholder="Enter name..." ng-model="name" ng-minlength="1" ng-maxlength="256" ng-trim="true" ng-change="setDirty()"></input>
+					<button class="btn btn-warning navbar-btn" ng-click="reset(true)"><i class="fa fa-star-o"></i>&nbsp;New</button>
+					<button class="btn btn-success navbar-btn" ng-click="open(true)"><i class="fa fa-folder-open-o"></i>&nbsp;Open</button>
+					<button class="btn btn-primary navbar-btn" ng-click="save(doc.name, doc.content)" ng-disabled="!canSave()"><i class="fa fa-floppy-o"></i>&nbsp;Save</button>
+					<input id="name" type="text" placeholder="Enter name..." ng-model="doc.name" ng-minlength="1" ng-maxlength="256" ng-trim="true" ng-change="setDirty()"></input>
 				</div>
 				<div class="pull-right">
-					<button class="btn btn-info navbar-btn" ng-click="enter_settings()"><i class="fa fa-gear"></i>&nbsp;Settings</button>
+					<button class="btn btn-info navbar-btn" ng-click="enterSettings()"><i class="fa fa-gear"></i>&nbsp;Settings</button>
 					<div class="btn-group" role="group" ng-if="development">
 						<button class="btn btn-warning navbar-btn" ng-click="reload()"><i class="fa fa-refresh"></i>&nbsp;Refresh</button>
 						<button class="btn btn-danger navbar-btn" ng-click="quit()"><i class="fa fa-power-off"></i>&nbsp;Quit</button>
@@ -34,13 +33,14 @@
 					<button class="btn btn-danger navbar-btn" ng-click="shutdown()" ng-if="!development"><i class="fa fa-power-off"></i>&nbsp;Power Off</button>
 				</div>
 			</div>
-			<div ng-if="settings">
-				<button class="btn btn-danger navbar-btn" ng-click="exit_settings()"><i class="fa fa-chevron-left"></i>&nbsp;Back</button>
+			<div ng-show="isSettingsMode()" class="ng-cloak">
+				<button class="btn btn-danger navbar-btn" ng-click="exitSettings()"><i class="fa fa-chevron-left"></i>&nbsp;Back</button>
 				<div class="btn-group" role="group">
-					<button class="btn btn-primary navbar-btn" ng-click="text_size(2)"><i class="fa fa-plus"></i></button>
-					<button class="btn btn-primary navbar-btn" ng-click="text_size()">Font</button>
-					<button class="btn btn-primary navbar-btn" ng-click="text_size(-2)"><i class="fa fa-minus"></i></button>
+					<button class="btn btn-primary navbar-btn" ng-click="setTextSize(2)"><i class="fa fa-plus"></i></button>
+					<button class="btn btn-primary navbar-btn" ng-click="setTextSize()">Font</button>
+					<button class="btn btn-primary navbar-btn" ng-click="setTextSize(-2)"><i class="fa fa-minus"></i></button>
 				</div>
+				<button class="btn btn-primary navbar-btn" ng-click="toggleBackgroundImage()"><i class="fa" ng-class="hasBackgroundImage() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-image"></i></button>
 			</div>
 		</div>
 	</body>
