--- a/web_ui/docs.html
+++ b/web_ui/docs.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
 	<span class="pull-left">
-		<h4 class="modal-title">{{docs.length}} Saved Documents</h4>
+		<h4 class="modal-title">Saved Documents</h4>
 	</span>
 	<span class="pull-right">
 		<i class="fa fa-close" ng-click="cancel()"></i>
@@ -13,14 +13,15 @@
 				<th>Name</th>
 				<th>Modified</th>
 				<th>Size</th>
+				<th>Actions</th>
 			</tr>
 		</thead>
-		<tbody id="list-rows">
-			<tr ng-repeat="doc in docs | orderBy: 'name'" ng-model="doc" ng-hide="doc.removed">
-				<td ng-click="select(doc)">{{doc.name}}</td>
-				<td ng-click="select(doc)">{{doc.modified | date: 'medium' }}</td>
-				<td ng-click="select(doc)">{{doc.size}}</td>
-				<td><i class="fa fa-trash" ng-click="delete(doc)"></i></td>
+		<tbody>
+			<tr class="doc-row" ng-repeat="doc in documents | orderBy: 'name'" ng-model="doc" ng-hide="doc.removed">
+				<td ng-click="selectDoc(doc)">{{doc.name}}</td>
+				<td ng-click="selectDoc(doc)">{{doc.modified | date: 'medium' }}</td>
+				<td ng-click="selectDoc(doc)">{{doc.size}}</td>
+				<td><i class="fa fa-trash" ng-click="deleteDoc(doc)"></i></td>
 			</tr>
 		</tbody>
 	</table>
