Massive re-factoring for better abstractions, etc.

--- a/web_ui/docs.html
+++ b/web_ui/docs.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
 	<span class="pull-left">
-		<h4 class="modal-title">Saved Documents</h4>
+		<h4 class="modal-title">Saved Documents on {{storage.label}}</h4>
 	</span>
 	<span class="pull-right">
 		<i class="fa fa-close" ng-click="cancel()"></i>
