--- a/web_ui/index.html
+++ b/web_ui/index.html
@@ -16,8 +16,8 @@
 				<textarea id="content" ng-attr-placeholder="Enter text..." ng-model="doc.content" ng-change="setDirty()" ng-style="{ 'font-size': getTextSize() }" ng-class="hasBackgroundImage() ? 'logo' : ''"></textarea>
 			</div>
 		</div>
-		<div id="footer">
-			<div ng-hide="isSettingsMode()" class="ng-cloak">
+		<div id="footer" ng-switch="isSettingsMode()">
+			<div ng-switch-when="false" class="ng-cloak">
 				<div class="pull-left">
 					<button class="btn btn-warning navbar-btn" ng-click="resetDoc(true)"><i class="fa fa-file-text-o"></i>&nbsp;New</button>
 					<button class="btn btn-success navbar-btn" ng-click="openDoc(true)"><i class="fa fa-folder-open-o"></i>&nbsp;Open</button>
@@ -26,14 +26,14 @@
 				</div>
 				<div class="pull-right">
 					<button class="btn btn-info navbar-btn" ng-click="enterSettings()"><i class="fa fa-gear"></i>&nbsp;Settings</button>
-					<div class="btn-group" role="group" ng-if="development">
+					<div class="btn-group" role="group" ng-if="isDevelopment()">
 						<button class="btn btn-warning navbar-btn" ng-click="reload()"><i class="fa fa-refresh"></i>&nbsp;Refresh</button>
 						<button class="btn btn-danger navbar-btn" ng-click="quit()"><i class="fa fa-power-off"></i>&nbsp;Quit</button>
 					</div>
-					<button class="btn btn-danger navbar-btn" ng-click="shutdown()" ng-if="!development"><i class="fa fa-power-off"></i>&nbsp;Power Off</button>
+					<button class="btn btn-danger navbar-btn" ng-click="shutdown()" ng-if="!isDevelopment()"><i class="fa fa-power-off"></i>&nbsp;Power Off</button>
 				</div>
 			</div>
-			<div ng-show="isSettingsMode()" class="ng-cloak">
+			<div ng-switch-when="true" class="ng-cloak">
 				<button class="btn btn-danger navbar-btn" ng-click="exitSettings()"><i class="fa fa-chevron-left"></i>&nbsp;Back</button>
 				<div class="btn-group" role="group">
 					<button class="btn btn-primary navbar-btn" ng-click="setTextSize(2)"><i class="fa fa-plus"></i></button>
@@ -42,6 +42,7 @@
 				</div>
 				<button class="btn btn-primary navbar-btn" ng-click="toggleBackgroundImage()"><i class="fa" ng-class="hasBackgroundImage() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-image"></i></button>
 				<button class="btn btn-primary navbar-btn" ng-click="selectStorage()"><i class="fa fa-database"></i>&nbsp;Storage</button>
+				<button class="btn btn-primary navbar-btn" ng-click="toggleDevelopment()"><i class="fa" ng-class="isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-gear"></i></button>
 			</div>
 		</div>
 	</body>
