--- a/web_ui/index.html
+++ b/web_ui/index.html
@@ -42,6 +42,7 @@
 				</div>
 				<button class="btn btn-primary navbar-btn" ng-click="settings.toggleBackgroundImage()"><i class="fa" ng-class="settings.hasBackgroundImage() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-image"></i></button>
 				<button class="btn btn-primary navbar-btn" ng-click="selectStorage()"><i class="fa fa-database"></i>&nbsp;Storage</button>
+				<button class="btn btn-primary navbar-btn" ng-click="selectAutoSave()"><i class="fa fa-hourglass-start"></i>&nbsp;AutoSave</button>
 				<button class="btn btn-primary navbar-btn" ng-click="settings.toggleDevelopment()"><i class="fa" ng-class="settings.isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-gear"></i></button>
 			</div>
 		</div>
