Checkpoint: adding User support

--- a/web_ui/autosave.html
+++ b/web_ui/autosave.html
@@ -22,5 +22,5 @@
 	</form>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" type="button" ng-click="save()">OK</button>
+	<button class="btn btn-primary" type="submit" ng-click="ok()">OK</button>
 </div>
