--- a/public/storage.html
+++ b/public/storage.html
@@ -1,4 +1,4 @@
-<div class="modal-header bg-primary">
+<div class="modal-header bg-success">
 	<h4 class="modal-title pull-left">Storage Settings <i class="fa fa-spinner fa-spin fa-fw fa-lg" ng-show="loading == true"></i></h4>
 	<i class="fa fa-close pull-right" ng-click="$dismiss('cancel')"></i>
 </div>
