--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <div class="modal-header bg-primary">
-	<h4 class="modal-title pull-left">Login</h4>
+	<h4 class="modal-title pull-left">Login <i class="fa fa-spinner fa-spin fa-fw fa-lg" ng-show="loading == true"></i></h4>
 	<i class="fa fa-close pull-right" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
@@ -7,7 +7,7 @@
 		<div class="form-group">
 			<label for="username" class="col-sm-2 control-label">Username</label>
 			<div class="col-sm-10">
-				<input class="form-control" type="text" ng-model="username" ng-enter="ok()"></input>
+				<select class="form-control" ng-options="user as user.username for user in users track by user.username" ng-model="user"></select>
 			</div>
 		</div>
 		<div class="form-group">
