Style tweaks: bigger icons, and handle overflowing dialogs

--- a/public/autosave.html
+++ b/public/autosave.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
 	<h4 class="modal-title pull-left">Autosave Settings</h4>
-	<i class="fa fa-close pull-right" ng-click="$dismiss('cancel')"></i>
+	<i class="fa fa-lg fa-close pull-right" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
 	<form class="form-horizontal">
@@ -14,7 +14,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<div class="checkbox">
 					<label>
-						<input ng-model="tempName.use" type="checkbox" ng-disabled="frequency == never">Use Temporary Name: <samp class="bg-info">{{tempName.pattern}}</samp> <i class="fa fa-long-arrow-right"></i> <samp class="bg-success">{{tempName.name}}</samp></input>
+						<input ng-model="tempName.use" type="checkbox" ng-disabled="frequency == never">Use Temporary Name: <samp class="bg-info">{{tempName.pattern}}</samp> <i class="fa fa-lg fa-long-arrow-right"></i> <samp class="bg-success">{{tempName.name}}</samp></input>
 					</label>
 				</div>
 			</div>
