--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-primary">
-	<h4 class="modal-title pull-left">Login <i class="fa fa-spinner fa-spin fa-fw fa-lg" ng-show="loading == true"></i></h4>
-	<i class="fa fa-close pull-right" ng-click="$dismiss('cancel')"></i>
+	<h4 class="modal-title pull-left">Login <i class="fa fa-lg fa-fw fa-spinner fa-spin" ng-show="loading == true"></i></h4>
+	<i class="fa fa-lg fa-close pull-right" ng-click="$dismiss('cancel')"></i>
 </div>
 <div class="modal-body">
 	<form class="form-horizontal" ng-submit="ok()">
@@ -17,7 +17,4 @@
 			</div>
 		</div>
 	</form>
-</div>
-<div class="modal-footer">
-	<button class="btn btn-primary" type="submit" ng-click="ok()">OK</button>
 </div>
