--- a/public/autosave.html
+++ b/public/autosave.html
@@ -7,7 +7,7 @@
 		<div class="form-group">
 			<label for="autoSaveFrequency" class="col-sm-2 control-label">Frequency</label>
 			<div class="col-sm-10">
-				<input type="range" ng-model="frequency" min="0" max="5" step="0.5"><span ng-if="frequency == never">Never</span><span ng-if="frequency != never">Every {{frequency}} minutes</span></input>
+				<input type="range" ng-model="frequency" min="0" max="5" step="0.5" autofocus><span ng-if="frequency == never">Never</span><span ng-if="frequency != never">Every {{frequency}} minutes</span></input>
 			</div>
 		</div>
 		<div class="form-group">
