--- a/public/index.html
+++ b/public/index.html
@@ -20,33 +20,34 @@
 		<div id="footer" ng-switch="settings.isSettingsMode()">
 			<div ng-switch-when="false" class="ng-cloak">
 				<div class="pull-left">
-					<button class="btn btn-warning navbar-btn" ng-click="resetDoc(true)"><i class="fa fa-file-text-o"></i>&nbsp;New</button>
-					<button class="btn btn-success navbar-btn" ng-click="openDoc(true)"><i class="fa fa-folder-open-o"></i>&nbsp;Open</button>
-					<button class="btn btn-primary navbar-btn" ng-click="saveDoc()" ng-disabled="!currentDocument.canSave()"><i class="fa fa-save"></i>&nbsp;Save</button>
+					<button class="btn btn-warning navbar-btn" ng-click="resetDoc(true)"><i class="fa fa-lg fa-file-text-o"></i>&nbsp;New</button>
+					<button class="btn btn-success navbar-btn" ng-click="openDoc(true)"><i class="fa fa-lg fa-folder-open-o"></i>&nbsp;Open</button>
+					<button class="btn btn-primary navbar-btn" ng-click="saveDoc()" ng-disabled="!currentDocument.canSave()"><i class="fa fa-lg fa-save"></i>&nbsp;Save</button>
 					<input id="name" type="text" placeholder="Enter name..." ng-model="currentDocument.name" ng-minlength="1" ng-maxlength="256" ng-trim="true" ng-change="currentDocument.setDirty()"></input>
 				</div>
 				<div class="pull-right">
-					<button class="btn btn-info navbar-btn" ng-click="settings.enterSettings()"><i class="fa fa-gear"></i>&nbsp;Settings</button>
+					<button class="btn btn-info navbar-btn" ng-click="settings.enterSettings()"><i class="fa fa-lg fa-gear"></i>&nbsp;Settings</button>
 					<div class="btn-group" role="group" ng-if="settings.isDevelopment()">
-						<button class="btn btn-warning navbar-btn" ng-click="reload()"><i class="fa fa-refresh"></i>&nbsp;Refresh</button>
-						<button class="btn btn-danger navbar-btn" ng-disabled="currentDocument.isDirty()" ng-click="quit()"><i class="fa fa-power-off"></i>&nbsp;Quit</button>
+						<button class="btn btn-warning navbar-btn" ng-click="reload()"><i class="fa fa-lg fa-refresh"></i>&nbsp;Refresh</button>
+						<button class="btn btn-danger navbar-btn" ng-disabled="currentDocument.isDirty()" ng-click="quit()"><i class="fa fa-lg fa-power-off"></i>&nbsp;Quit</button>
 					</div>
-					<button class="btn btn-danger navbar-btn" ng-disabled="currentDocument.isDirty()" ng-click="shutdown()" ng-if="!settings.isDevelopment()"><i class="fa fa-power-off"></i>&nbsp;Power Off</button>
+					<button class="btn btn-danger navbar-btn" ng-disabled="currentDocument.isDirty()" ng-click="shutdown()" ng-if="!settings.isDevelopment()"><i class="fa fa-lg fa-power-off"></i>&nbsp;Power Off</button>
 				</div>
 			</div>
 			<div ng-switch-when="true" class="ng-cloak">
-				<button class="btn btn-danger navbar-btn" ng-click="settings.exitSettings()"><i class="fa fa-chevron-left"></i>&nbsp;Back</button>
-				<div class="btn-group" role="group">
-					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize(2)"><i class="fa fa-plus"></i></button>
+				<button class="btn btn-danger navbar-btn" ng-click="settings.exitSettings()"><i class="fa fa-lg fa-chevron-left"></i>&nbsp;Back</button>
+				<div class="btn-group" role="group" title="Adjust Text Size">
+					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize(2)"><i class="fa fa-lg fa-caret-up"></i></button>
 					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize()"><i class="fa fa-font"></i></button>
-					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize(-2)"><i class="fa fa-minus"></i></button>
+					<button class="btn btn-primary navbar-btn" ng-click="settings.setTextSize(-2)"><i class="fa fa-lg fa-caret-down"></i></button>
 				</div>
-				<button class="btn btn-primary navbar-btn" ng-click="settings.toggleBackgroundImage()"><i class="fa" ng-class="settings.hasBackgroundImage() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-image"></i></button>
-				<button class="btn btn-primary navbar-btn" ng-click="selectStorage()"><i class="fa fa-database"></i>&nbsp;Storage</button>
-				<button class="btn btn-primary navbar-btn" ng-click="selectAutoSave()"><i class="fa fa-hourglass-start"></i>&nbsp;AutoSave</button>
-				<button class="btn btn-primary navbar-btn" ng-click="settings.toggleDevelopment()"><i class="fa" ng-class="settings.isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-gear"></i></button>
-				<button class="btn btn-warning navbar-btn" ng-click="login()" ng-show="!isLoggedIn()"><i class="fa fa-unlock"></i>&nbsp;Login</button>
-				<button class="btn btn-danger navbar-btn" ng-click="logout()" ng-show="isLoggedIn()"><i class="fa fa-lock"></i>&nbsp;Logout</button>
+				<button class="btn btn-primary navbar-btn" title="Toggle Background Image" ng-click="settings.toggleBackgroundImage()"><i class="fa fa-lg" ng-class="settings.hasBackgroundImage() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-lg fa-image"></i></button>
+				<button class="btn btn-primary navbar-btn" ng-click="selectStorage()"><i class="fa fa-lg fa-database"></i>&nbsp;Storage</button>
+				<button class="btn btn-primary navbar-btn" ng-click="selectAutoSave()"><i class="fa fa-lg fa-hourglass-start"></i>&nbsp;AutoSave</button>
+				<button class="btn btn-primary navbar-btn" title="Toggle Development Mode" ng-click="settings.toggleDevelopment()"><i class="fa fa-lg" ng-class="settings.isDevelopment() ? 'fa-toggle-on' : 'fa-toggle-off'"></i>&nbsp;<i class="fa fa-lg fa-gear"></i></button>
+				<button class="btn btn-warning navbar-btn" ng-click="login()" ng-show="!isLoggedIn()"><i class="fa fa-lg fa-unlock"></i>&nbsp;Login</button>
+				<button class="btn btn-danger navbar-btn" ng-click="logout()" ng-show="isLoggedIn()"><i class="fa fa-lg fa-lock"></i>&nbsp;Logout</button>
+				<button class="btn btn-danger navbar-btn" ng-click="modifyUsers()"><i class="fa fa-lg fa-users"></i>&nbsp;Users</button>
 			</div>
 		</div>
 	</body>
