--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
 		<div class="form-group">
 			<label for="username" class="col-sm-2 control-label">Username</label>
 			<div class="col-sm-10">
-				<select class="form-control" ng-options="user as user.username for user in users track by user.username" ng-model="user"></select>
+				<select class="form-control" ng-options="user as user.username for user in users track by user.username" ng-model="user" autofocus></select>
 			</div>
 		</div>
 		<div class="form-group">
