Fix issues with delete confirmation (no 'extra')

--- a/public/password.html
+++ b/public/password.html
@@ -10,7 +10,7 @@
 				<input class="form-control" type="password" autofocus ng-model="password" ng-enter="ok()"></input>
 			</div>
 		</div>
-		<div class="form-group">
+		<div class="form-group" ng-if="extra.label">
 			<label for="password" class="col-sm-3 control-label">{{extra.label}}</label>
 			<div class="col-sm-9">
 				<input class="form-control" type="text" ng-model="extra.value" ng-enter="ok()"></input>
